src/test/ui/consts/issue-56164.stderr
error[E0015]: cannot call non-const closure in constant functions
  --> $DIR/issue-56164.rs:1:18
   |
LL | const fn foo() { (||{})() }
   |                  ^^^^^^^^
   |
   = note: closures need an RFC before allowed to be called in constant functions
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: function pointer calls are not allowed in constant functions
  --> $DIR/issue-56164.rs:6:5
   |
LL |     input()
   |     ^^^^^^^

error[E0080]: erroneous constant used
  --> $DIR/issue-56164.rs:1:18
   |
LL | const fn foo() { (||{})() }
   |                  ^^^^^^ referenced constant has errors

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0015, E0080.
For more information about an error, try `rustc --explain E0015`.
